# CUA-Gym

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  vm_requirements.txt
.claude/: settings.json
.claude/agents/: orchestrator.md  reward-gen.md  setup-gen.md  task-gen.md
.claude/commands/: create-skill.md
.claude/skills/blender/: SKILL.md
.claude/skills/chrome/: SKILL.md
.claude/skills/drawio/: SKILL.md
.claude/skills/excalidraw/: SKILL.md
.claude/skills/gimp/: SKILL.md
.claude/skills/grafana/: SKILL.md
.claude/skills/libreoffice-calc/: SKILL.md
.claude/skills/libreoffice-impress/: SKILL.md
.claude/skills/libreoffice-writer/: SKILL.md
.claude/skills/mock_websites/: REWARD_SKILL.md  SKILL.md
.claude/skills/openshot/: SKILL.md
.claude/skills/os/: SKILL.md
configs/: select_config.json  select_config_test.json
docker/: Dockerfile  build_image.sh  entrypoint.sh
filter/: benchmark_tasks.json  critic_prompt.py  majority_vote_filter.py  run_critic_benchmark.py  taxonomy.yaml
provision/docker/: Dockerfile  build_image.sh  healthcheck.sh
provision/e2b/: build_cua_gym_template.py
scripts/: agent_common.py  analyze_tasks.py  analyze_trajectories.py  batch_orchestrator.py  check_available_zones.py  collect_allocated_tasks.py  collect_done_tasks.py  env_cli.py  holo_model.py  materialize_dataset_urls.py  minimax_model.py  qwen3vl_model.py  qwen_model.py  run_trajectories.py  select_tasks.py
slurm/: start_vllm.sh
utils/: __init__.py  env.py  llm_utils.py  logger.py  reward_judge.py
(+64 files in other folders)
